kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: angular-service
  namespace: smart-shell-production
spec:
  type: ClusterIP
  selector:
    app: angular
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: angular
  selector:
    app: angular
