kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: smart-shell-ingress
  namespace: smart-shell-production
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: "smart-shell.luis122448.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: angular-service
                port:
                  number: 80
  tls:
    - hosts:
        - "smart-shell.luis122448.com"
      secretName: smart-shell-luis122448-com-tls
